--- a/views/party.pug
+++ b/views/party.pug
@@ -4,3 +4,20 @@ h2= party.name
 h3 Créé par #{party.author}
 label(for="url") Partagez l'événement
 input(id="url" value=`${url}`)
+
+ul
+  each item in party.items
+    li= item.name
+    form(method="post" action=`/party/${party._id}/items/${item._id}`)
+      button(type="submit") supprimer
+
+      
+form(method="post" action=`/party/${party._id}/items`)
+  div
+    label(for="name") Nom de l'item
+    input(name="name" id="name" required minlength="3" placeholder="champagne")
+  div
+    label(for="author" required) Votre pseudo
+    input(name="author" id="author" required minlength="3" placeholder="Louis")
+  button(type="submit") Ajouter
+
