--- a/views/party.pug
+++ b/views/party.pug
@@ -3,7 +3,7 @@ h1 Qui prend quoi ?
 h2= party.name
 h3 Créé par #{party.author}
 label(for="url") Partagez l'événement
-input(id="url" value=`${url}` data-clipboard=`${url}`)
+input(id="url" value=`${url}` data-clipboard=`${url}` data-share-url=`${url}` data-share-title=`${party.name}` data-share-text=`${party.author} vous invite a rejoindre l'événement ${party.name}`)
 
 ul
   each item in party.items
