--- a/partials/header.pug
+++ b/partials/header.pug
@@ -6,4 +6,12 @@ html(lang="fr")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet" href="/style.css")
     script(src="/script.js" async)
+    script.
+      if (navigator.serviceWorker) {
+        navigator.serviceWorker.register("/sw.js")
+          .then(() => console.log('Service worker is registered'))
+          .catch(err => console.warn(err));
+      } else {
+        console.log('Nothing to see here...');
+      }
   body
