--- a/views/index.pug
+++ b/views/index.pug
@@ -10,4 +10,4 @@ form(method="post" action="/party").newParty
     input(name="author" id="author" required minlength="3" placeholder="John")
     label(for="date") Date de l'événement
     input(name="date" id="date" type="date")
-  button(type="submit") Créer
+  button(type="submit").btn_event_create Créer
