--- a/styles/blocs/newParty.scss
+++ b/styles/blocs/newParty.scss
@@ -1,10 +1,16 @@
+.newParty, .btn_event_create, .party_container {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
 .newParty__fields {
   margin-bottom: 1em;
 
   @include medium {
     display: grid;
     grid-template-columns: 175px 1fr;
-    grid-gap: 5px;
+    grid-gap: 13px;
     max-width: 500px;
   }
 
@@ -14,5 +20,9 @@
     @include medium {
       place-self: center end;
     }
+  }
+
+  &.share {
+    margin-top: 3rem;
   }
 }
